make div elements have back face visibility hidden stops flicker when transition is ran correctly.

--- a/css/_ui.less
+++ b/css/_ui.less
@@ -13,13 +13,12 @@ select, button { -webkit-tap-highlight-color:rgba(0,0,0,0); border:none; -webkit
   overflow:hidden;
   width: 100%;
   -webkit-transform: translate3d(0%, 0px, 0px) scale(1) rotate(0deg) rotateY(0deg) skew(0deg, 0deg);
-  -webkit-transform-style: preserve-3d;
-  & > * {
-    // stops flickr on ipad
-    -webkit-transform-style: preserve-3d;
-    -webkit-perspective:1000px;
-    -webkit-backface-visibility: hidden;
-    }
+}
+
+div {
+  -webkit-perspective:1000px;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0%, 0px, 0px) scale(1) rotate(0deg) rotateY(0deg) skew(0deg, 0deg);
 }
 
 .panel {
@@ -31,8 +30,10 @@ select, button { -webkit-tap-highlight-color:rgba(0,0,0,0); border:none; -webkit
   width:100%;
   .box-sizing;
   left:-100%;
-
+  -webkit-perspective:1000px;
+  -webkit-backface-visibility: hidden;
     .content {
+      background: #f1ebe2;
 
     }
 
